# Scribe-Desktop

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  update_i18n_keys.sh
.github/: COC_CONTACT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_wikidata.yml  design_improvement.yml  feature_request.yml  localization.yml  new_keyboard.yml  question.yml
.github/workflows/: ci_license_header_check.yaml  ci_rust.yaml  ci_spdx_license_header_check.yaml  pr_maintainer_checklist.yaml  rust_ci.yaml
Resources/: Scribe-Desktop_logo.sketch
Scribe/: gui.py
scribe/: Cargo.toml
scribe/src/: key_utils.rs  keys.rs  lib.rs  main.rs  state.rs  styles.rs
scribe/src/data/: ENLanguageData.sqlite
