[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scribe"
path = "src/bin/gui.rs"

[dependencies]
iced = { version = "0.12.1", features = ["image"] }
iced_futures = "0.12.0"
iced_native = "0.10.3"
rdev = "0.5.3"
dark-light = "1.0"
tokio = { version = "1.0", features = ["time"] }
