[package]
name = "scribe"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[[bin]]
name = "listener"
path = "src/bin/listener.rs"

[dependencies]
iced = { version = "0.13", features = ["image"] }
iced_futures = "0.13"
rdev = "0.5.3"
dark-light = "1.0"
tokio = { version = "1.0", features = ["time"] }
